--- a/src/helper-imports.html
+++ b/src/helper-imports.html
@@ -3,3 +3,7 @@
     self.Color = net.brehaut.Color;
 </script>
 <script src="../bower_components/localforage/dist/localforage.min.js"></script>
+<script src="../bower_components/idb-keyval/dist/idb-keyval-min.js"></script>
+<script src="../bower_components/pouchdb/dist/pouchdb.min.js"></script>
+<script src="../bower_components/pouchdb/dist/pouchdb.find.min.js"></script>
+<script src="../bower_components/worker-pouch/dist/pouchdb.worker-pouch.min.js"></script>
