--- a/src/inkwell-app.html
+++ b/src/inkwell-app.html
@@ -17,24 +17,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="hermes-icons.html">
 <link rel="import" href="helper-imports.html">
-<link rel="lazy-import" href="hermes-note.html">
-<link rel="lazy-import" href="hermes-search.html">
-<link rel="lazy-import" href="hermes-view3.html">
-<link rel="lazy-import" href="hermes-view404.html">
+<link rel="import" href="note-input.html">
+<link rel="import" href="inkwell-icons.html">
+<link rel="lazy-import" href="inkwell-note.html">
+<link rel="lazy-import" href="inkwell-home.html">
+<link rel="lazy-import" href="inkwell-board.html">
+<link rel="lazy-import" href="inkwell-view404.html">
 
-<dom-module id="hermes-app">
+<dom-module id="inkwell-app">
   <template>
     <style>
       :host {
-        --app-primary-color: #4285f4;
+        --app-primary-color: #212121;
         --app-secondary-color: black;
-
+        --dialog-width: initial;
+        --dialog-height:initial;
         display: block;
       }
 
@@ -47,12 +50,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: var(--app-primary-color);
       }
 
-      app-header paper-icon-button {
+      app-header > paper-icon-button {
         --paper-icon-button-ink-color: white;
       }
-
       .drawer-list {
         margin: 0 20px;
+      }
+      note-input {
+        height:100%;
       }
 
       .drawer-list a {
@@ -67,22 +72,43 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: black;
         font-weight: bold;
       }
+      .fscreen {
+        position:absolute;
+        top:0;
+        right:5px;
+      }
+      paper-dialog {
+        width: var(--dialog-width);
+        height:var(--dialog-height);
+      }
     </style>
     <paper-toast id="toast"></paper-toast>
+    <paper-dialog id="noteDialog">
+      <div style="position:relative;height:100%;margin:0;display:flex;flex-direction:column">
+        <paper-icon-button class="fscreen"
+          icon="inkwell-icons:fullscreen[[fullscreenSuffix(dialogMax)]]"
+          on-tap="toggleDialogMax"></paper-icon-button>
+        <note-input on-save-note="saveNote"
+          title="[[dialogNote.title]]"
+          parent="[[dialogNote.parent]]"></note-input>
+      </div>
+    </paper-dialog>
     <app-location route="{{route}}"></app-location>
     <app-route
         route="{{route}}"
         pattern="[[rootPattern]]:page"
         data="{{routeData}}"
+        query-params="{{query}}"
         tail="{{subroute}}"></app-route>
 
-    <app-drawer-layout fullbleed>
+    <app-drawer-layout fullbleed force-narrow>
       <!-- Drawer content -->
       <app-drawer id="drawer" slot="drawer">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="note" href="note">View One</a>
-          <a name="search" href="search">View Two</a>
+          <a name="home" href="home">Home</a>
+          <a name="note" href="note">Notes</a>
+          <a name="search" href="search">Search</a>
         </iron-selector>
       </app-drawer>
 
@@ -91,28 +117,32 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <app-header slot="header" condenses reveals effects="waterfall">
           <app-toolbar>
-            <paper-icon-button icon="hermes-icons:menu" drawer-toggle></paper-icon-button>
-            <div main-title>Hermes</div>
+            <paper-icon-button icon="inkwell-icons:menu" drawer-toggle></paper-icon-button>
+            <div main-title>Inkwell</div>
           </app-toolbar>
         </app-header>
 
-        <iron-pages
+        <iron-pages on-edit-note="editNote"
+            on-create-card="createCard"
             selected="[[page]]"
             attr-for-selected="name"
             fallback-selection="view404"
             role="main">
-          <hermes-note name="note" on-save-note="saveNote"></hermes-note>
-          <hermes-search name="search"></hermes-search>
-          <hermes-view404 name="view404"></hermes-view404>
+          <inkwell-board name="board" route="{{subroute}}" board="[[findBoard(boards, route.path)]]"></inkwell-board>
+          <inkwell-home name="home"
+            on-create-board="createBoard"
+            boards="[[boards]]"
+            unfiled-cards="[[unfiledCards]]"></inkwell-home>
+          <inkwell-view404 name="view404"></inkwell-view404>
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
   </template>
 
   <script>
-    class HermesApp extends Polymer.Element {
+    class InkwellApp extends Polymer.Element {
 
-      static get is() { return 'hermes-app'; }
+      static get is() { return 'inkwell-app'; }
 
       static get properties() {
         return {
@@ -124,6 +154,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           rootPattern: String,
           routeData: Object,
           subroute: String,
+          dialogMax: {
+            type: Boolean,
+            value: () => false
+          }
         };
       }
 
@@ -150,7 +184,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // If no page was found in the route data, page will be an empty string.
         // Deault to 'note' in that case.
-        this.page = page || 'note';
+        this.page = page || 'home';
 
         // Close a non-persistent drawer when the page & route are changed.
         if (!this.$.drawer.persistent) {
@@ -169,24 +203,129 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         })
         this.$.toast.show({duration: 3000, text: msg})
       }
+      // wraps pouchdb put, and fires off a custom event with the uid
+      async putWrapper(uid, cat, data) {
+        let clone = Object.assign({}, data)
+        delete clone.parent;
+        this.db.put(
+          Object.assign(clone, {_id: uid})
+        ).then(() => this.dispatchEvent(new CustomEvent(`new-${cat}`, { detail: {id: uid, parent: data.parent} })));
+      }
+      // orphaned cards have the parent /unfiled, filed cards may have /board/XX, or an arbitrarily large number of parents
+      async createCard(data) {
+        let uid = `/card/${data.title.toLowerCase()}`;
+        await this.putWrapper(uid, 'card', data)
+        let parentDoc = await this.db.get(data.parent);
+        if(parentDoc.children.indexOf(uid) == -1) {
+          parentDoc.children.push(uid);
+        }
+        await this.db.put(Object.assign(parentDoc, {
+          _id: data.parent,
+          _rev: parentDoc._rev
+        }));
+      }
+      findBoard(boards, path) {
+        if(!boards || !path) {
+          return {}
+        }
+        return boards.find(elem => elem._id == path)
+      }
+      // parent may be another board
+      async createBoard(e) {
+        let data = e.detail;
+        let uid = `/board/${data.title.toLowerCase()}`;
+        this.putWrapper(uid, 'board', Object.assign(data, {children: []}))
+      }
+      async getBoards() {
+        let boards = await this.db.allDocs({
+          include_docs: true,
+          startkey: '/board/',
+          endkey: `/board/\ufff0`
+        })
+        return boards.rows
+      }
+      async editNote(e) {
+        console.log(e);
+        this.set('dialogNote', e.detail)
+        this.$.noteDialog.open();
+      }
+      async initHome() {
+        let boards = await Promise.all((await this.getBoards()).map(async (board) => {
+          let children = await this.db.allDocs({
+            include_docs: true,
+            keys: board.doc.children != undefined ? board.doc.children : []
+          });
+          return Object.assign(board.doc, {children: children.rows.map(c => c.doc)})
+        }))
+        this.set('boards',boards);
+        let unfiled = await this.db.get('/unfiled');
+        this.set('unfiledCards',(await this.db.allDocs({
+          keys: unfiled.children,
+          include_docs: true
+        })).rows.map(card => card.doc))
+      }
+      async setupPouch() {
+        await workerPouch.isSupportedBrowser().then((supported) => {
+          if (supported) {
+            this.db = new PouchDB('inkwelldb', { adapter: 'worker' });
+          } else { // fall back to a normal PouchDB
+            this.db = new PouchDB('inkwelldb');
+          }
+        })
+        try {
+          await this.db.get('/unfiled')
+        } catch (err) {
+          await this.db.put({_id: '/unfiled', children: [] })
+        }
+      }
       ready() {
         super.ready();
-        this.addEventListener('disable-pointer-events', function(e) {
-          this.updateStyles({'pointer-events': none})
-        })
-        localforage.config({name: 'hermesStore'});
-        navigator.serviceWorker.addEventListener('message', (message) => {
-          if(message.data.topic == 'save-note') {
-            // notify the user
-            let msg = `successfully synced ${Object.keys(message.data.notes).length} notes`;
-            this.displayToast(msg, 'success')
-          }
+        Polymer.RenderStatus.afterNextRender(this, function () {
+          navigator.serviceWorker.addEventListener('message', (message) => {
+            if (message.data.topic == 'save-note') {
+              // notify the user
+              let msg = `successfully synced ${Object.keys(message.data.notes).length} notes`;
+              this.displayToast(msg, 'success')
+            }
+          });
+          this.setupPouch().then(() => this.initHome())
         });
+        this.addEventListener('new-card', (e) => {
+          console.log(e);
+          let parent = e.detail.parent;
+          this.db.get(e.detail.id).then(card => {
+            console.log(card);
+            if (parent == '/unfiled') {
+
+              this.push('unfiledCards', card);
+            } else {
+              let idx = this.boards.findIndex((elem) => elem._id == parent);
+              console.log(this.boards[idx].children)
+              this.push(`boards.${idx}.children`, card)
+              this.notifySplices(`boards.${idx}.children`,
+                { index: this.boards[idx].children.length-2, removed: [], addedCount: 1, object: this.boards[idx].children, type: 'splice' }
+              );
+
+            }
+          })
+          
+        })
+        this.addEventListener('new-board', (e) => {
+          console.log(e);
+          // assume the board doesn't have a parent. Implement in future
+          this.db.get(e.detail.id).then(doc => {
+            this.push('boards', doc)
+          })
+        })
+        this.addEventListener('view-board', (e) => {
+          // navigate to /board?id=XX
+          this.set('route.path', e.detail);
+        })
       }
 
       _pageChanged(page) {
         // Load page import on demand. Show 404 page if fails
-        var resolvedPageUrl = this.resolveUrl('hermes-' + page + '.html');
+        var resolvedPageUrl = this.resolveUrl('inkwell-' + page + '.html');
         Polymer.importHref(
             resolvedPageUrl,
             null,
@@ -199,6 +338,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       saveNote(e) {
+        console.log(e);
+        this.createCard(e.detail)
+        this.$.noteDialog.close();
+        return
         // compensate for deviation (ms vs s) from ISO standard
         let timestamp = Math.round(new Date().getTime()/1000).toString();
         Object.assign(e.detail, {timestamp: timestamp})
@@ -245,8 +388,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           // that's it, just remember to clear it out in service worker
         }
       }
+      fullscreenSuffix(dialogMax) {
+        return dialogMax ? '-exit' : '';
+      }
+      toggleDialogMax() {
+        this.set('dialogMax', !this.dialogMax)
+        this.updateStyles({
+          "--dialog-width": this.dialogMax ? '100vw' : 'initial',
+          "--dialog-height": this.dialogMax ? '100vh' : 'initial'
+        })
+        this.$.noteDialog.querySelector('note-input').dispatchEvent(new CustomEvent('iron-resize',{bubbles: true, composed: true}))
+      }
     }
 
-    window.customElements.define(HermesApp.is, HermesApp);
+    window.customElements.define(InkwellApp.is, InkwellApp);
   </script>
 </dom-module>
