--- a/src/inkwell-note.html
+++ b/src/inkwell-note.html
@@ -10,10 +10,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
-<link rel="import" href="note-card.html">
+<link rel="import" href="note-input.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 
-<dom-module id="hermes-note">
+<dom-module id="inkwell-note">
   <template>
     <style include="shared-styles">
       :host {
@@ -23,24 +23,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         /*touch-action:none;*/
       }
     </style>
-    <note-card></note-card>
+    <note-input></note-input>
     <paper-button on-tap="openNoteOverlay">Add Note</paper-button>
-    <div class="card">
-      <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.</p>
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
   </template>
 
   <script>
-    class HermesNote extends Polymer.Element {
-      static get is() { return 'hermes-note'; }
+    class InkwellNote extends Polymer.Element {
+      static get is() { return 'inkwell-note'; }
       openNoteOverlay() {
 
       }
     }
 
-    window.customElements.define(HermesNote.is, HermesNote);
+    window.customElements.define(InkwellNote.is, InkwellNote);
   </script>
 </dom-module>
