--- a/src/inkwell-view404.html
+++ b/src/inkwell-view404.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 
-<dom-module id="hermes-view404">
+<dom-module id="inkwell-view404">
   <template>
     <style>
       :host {
@@ -24,8 +24,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
-    class HermesView404 extends Polymer.Element {
-      static get is() { return 'hermes-view404'; }
+    class InkwellView404 extends Polymer.Element {
+      static get is() { return 'inkwell-view404'; }
       static get properties() {
         return {
           // This shouldn't be neccessary, but the Analyzer isn't picking up
@@ -35,6 +35,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     }
 
-    window.customElements.define(HermesView404.is, HermesView404);
+    window.customElements.define(InkwellView404.is, InkwellView404);
   </script>
 </dom-module>
