--- a/src/inkwell-icons.html
+++ b/src/inkwell-icons.html
@@ -4,6 +4,9 @@
 <iron-iconset-svg size="24" name="inkwell-icons">
     <svg>
         <defs>
+            <g id="menu">
+                <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+            </g>
             <g id="add">
                 <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
             </g>
