--- a/src/note-input.html
+++ b/src/note-input.html
@@ -83,6 +83,7 @@
                     this.set('width', rect.width)
                     this.set('height', rect.height-118)
                 })
+                console.log(this);
             }
 
         }
